# OpenTrial

./: .env.example  .gitignore  MVP.md  README.md  VALUE.md  app.py  pyproject.toml
scripts/: build_project_handbook.py
src/opentrial/: __init__.py  config.py  schemas.py  workflow.py
src/opentrial/compute/: __init__.py  mc.py  priors.py  simulation.py
src/opentrial/data/: __init__.py  demo_evidence.py
src/opentrial/integrations/: __init__.py  _dates.py  _http.py  clinicaltrials.py  dailymed.py  gemini.py  openfda.py  pubmed.py  registry.py
src/opentrial/report/: __init__.py  markdown.py
tests/: test_clinicaltrials.py  test_dailymed.py  test_dates.py  test_gemini.py  test_http.py  test_mc.py  test_openfda.py  test_pubmed.py  test_schemas.py  test_simulation.py  test_vertical_slice.py  test_workflow.py
