[project]
name = "opentrial"
version = "0.1.0"
description = "Bayesian clinical trial design engine with cited evidence provenance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
